--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!--Google Map API-->
-  <script src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEy>"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>"></script>
   <title>google_api_practice</title>
 </head>
 
